# python-project-83

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: code-cheks.yml
page_analyzer/templates/: index.html
